# ROS

./: .gitignore  README.md
kinematics_lib/: CMakeLists.txt  package.xml
kinematics_lib/launch/: scara_launch.launch
kinematics_lib/scripts/: scara_node.py  square_trajectory.py
kinematics_lib_metapackage/: CMakeLists.txt  package.xml
scara_lwr_description/: CMakeLists.txt  package.xml
