<?xml version="1.0"?>
<package format="2">
  <name>kinematics_lib</name>
  <version>0.0.0</version>
  <description>Inverse kinematics of SCARA robot</description>

  <maintainer email="pernilla.wikstrom.utv@gmail.com">pernilla</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>urdf</exec_depend>

</package>
